rds.tf
resource "aws_db_subnet_group" "main" {
  name       = "terraform-db-subnet-group"
  subnet_ids = [
    aws_subnet.private-1a.id,
    aws_subnet.private-1c.id
  ]

  tags = {
    Name = "terraform-db-subnet-group"
  }
}

resource "aws_db_instance" "main" {
  identifier        = "terraform-rds"
  engine            = "mysql"
  engine_version    = "8.0"
  instance_class    = "db.t3.micro"
  allocated_storage = 20

  db_name  = "mydb"
  username = "admin"
  password = var.db_password

  db_subnet_group_name   = aws_db_subnet_group.main.name
  vpc_security_group_ids = [aws_security_group.rds_sg.id]

  skip_final_snapshot = true

  tags = {
    Name = "terraform-rds"
  }
}
